crates/cox-provider/src/openai/snapshots/cox_provider__openai__responses__tests__responses_stream_one_tool_call.snap
---
source: crates/cox-provider/src/openai/responses.rs
expression: "run_fixture(\"one_tool_call\")"
---
[
  {
    "type": "tool_use_start",
    "id": "00000000000000000000000000",
    "name": "read"
  },
  {
    "type": "tool_use_input_delta",
    "text": "{\"path\":"
  },
  {
    "type": "tool_use_input_delta",
    "text": "\"a.rs\"}"
  },
  {
    "type": "tool_use_end"
  },
  {
    "type": "stop",
    "stop": {
      "type": "end_turn"
    }
  },
  {
    "type": "usage",
    "usage": {
      "input_tokens": 512,
      "output_tokens": 24,
      "cache_read_tokens": 50,
      "cache_write_tokens": 0,
      "estimated": false,
      "cost_usd": 0.0,
      "latency_ms": 0
    }
  }
]
